--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ img{
 div{
     min-height: 125px;
     padding: 20px;
-    border:3px, #ffffff;
+    border:3px solid #ffffff;
 }
 
 .introduction{
