--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,16 @@ div{
     background-color: #f00000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-top: 2px;
+    border-right: 5px;
 }
 
 div.blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-left: 5px;
+    border-bottom: 2px;
     color: #C4C4C4;
 }
 
@@ -65,8 +65,8 @@ div.yellow{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-top: 2px;
+    border-right: 5px;
     color: #707070;
 }
 
@@ -74,12 +74,17 @@ div.green{
     background-color: #00EB00;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-left: 5px;
+    border-bottom: 2px;
 }
 
 footer{
     background: linear-gradient(90deg, #000000 0%, #0000ff 25%,  #0066ff 70%, #000000 100%); 
-    border: 5px, #ffffff;
+    border: 5px #ffffff solid;
+    text-align: right;
+    font-size: 20px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
 }
 
