--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ div.yellow{
 }
 
 div.green{
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-left: 5px;
@@ -82,6 +82,12 @@ footer{
     background: linear-gradient(90deg, #000000 0%, #0000ff 25%,  #0066ff 70%, #000000 100%); 
     border: 5px #ffffff solid;
     text-align: right;
+    font-size: 20px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+#footer p{
     font-size: 20px;
     padding-top: 15px;
     padding-right: 15px;
