--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,12 @@ div.green{
 footer{
     background: linear-gradient(90deg, #000000 0%, #0000ff 25%,  #0066ff 70%, #000000 100%); 
     border: 5px #ffffff solid;
-    text-align: right;
 }
 #footer p{
     font-size: 20px;
+    text-align: right;
     padding-top: 15px;
-    padding-right: 15px;
+    padding-left: 15px;
     padding-bottom: 15px;
 }
 
