--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ div{
     background-color: #f00000;
     text-align: right;
     margin-left: 50px;
-    border-top: 2px;
+    border-bottom: 2px;
     border-right: 5px;
 }
 
@@ -58,6 +58,10 @@ div.blue{
     margin-right: 50px;
     border-left: 5px;
     border-bottom: 2px;
+    color: #C4C4C4;
+}
+
+.blue > h2 {
     color: #C4C4C4;
 }
 
@@ -81,10 +85,10 @@ div.green{
 footer{
     background: linear-gradient(90deg, #000000 0%, #0000ff 25%,  #0066ff 70%, #000000 100%); 
     border: 5px #ffffff solid;
+    text-align: right;
 }
 #footer p{
     font-size: 20px;
-    text-align: right;
     padding-top: 15px;
     padding-left: 15px;
     padding-bottom: 15px;
