--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,20 @@ div{
     background-color: #f00000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-right: 5px;
+    border-bottom-width: 2px;
+    border-left-width: 5px;
+    border-top-width: 0px;
+    border-right-width: 0px;
 }
 
 div.blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-left: 5px;
-    border-bottom: 2px;
+    border-right-width: 5px;
+    border-top-width: 2px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
     color: #C4C4C4;
 }
 
@@ -69,8 +73,10 @@ div.yellow{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-top: 2px;
-    border-right: 5px;
+    border-bottom-width: 2px;
+    border-left-width: 5px;
+    border-right-width: 0px;
+    border-top-width: 0px;
     color: #707070;
 }
 
@@ -78,8 +84,10 @@ div.green{
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-left: 5px;
-    border-bottom: 2px;
+    border-right-width: 5px;
+    border-top-width: 2px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
 }
 
 footer{
