--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ footer{
     border: 5px #ffffff solid;
     text-align: right;
 }
-#footer p{
+footer p{
     font-size: 20px;
     padding-top: 15px;
     padding-left: 15px;
