--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ footer{
 footer p{
     font-size: 20px;
     padding-top: 15px;
-    padding-left: 15px;
+    padding-right: 15px;
     padding-bottom: 15px;
 }
 
