--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ div{
 }
 
 .red{
-    background-color: #f00000;
+    background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
     border-bottom-width: 2px;
@@ -97,8 +97,6 @@ footer{
 }
 footer p{
     font-size: 20px;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding: 15px, 15px, 15px, 0px;
 }
 
