--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,9 @@ footer{
 }
 footer p{
     font-size: 20px;
-    padding: 15px, 15px, 15px, 0px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-top: 0px;
 }
 
